forgot to update IfDesugar testcase